--- a/list-of-orders.html
+++ b/list-of-orders.html
@@ -12,6 +12,7 @@
 	<!-- Include styles -->
 	<link rel="stylesheet" href="stylesheets/font-awesome.css">
 	<!--- Component CSS -->
+	<!--- Component CSS -->
 	<link rel="stylesheet" href="stylesheets/slick.css">
 	<link rel="stylesheet" href="stylesheets/slick-theme.css">
 	<link rel="stylesheet" href="stylesheets/ninja-slider/ninja-slider.css">
@@ -206,7 +207,7 @@
 			</div>
 		</div>
 	</header>
-	<section class="site-container type-nav type-nav-contact-us">
+	<section class="site-container type-nav type-nav-cart">
 		<div class="under-content">
 			<div class="desctop-services-menu">
 				<ul class="navigation-menu">
@@ -245,22 +246,22 @@
 						<div class="submenu">
 							<ul class="submenu-list">
 								<li>
-									<a href="#" class="submenu-item-active">NAME OF CATEGORY # 1</a>
+									<a href="#">NAME OF CATEGORY # 1</a>
 								</li>
 								<li>
-									<a href="#" class="submenu-item-active">NAME OF CATEGORY # 2</a>
+									<a href="#">NAME OF CATEGORY # 2</a>
 								</li>
 								<li>
-									<a href="#" class="submenu-item-active">NAME OF CATEGORY # 3</a>
+									<a href="#">NAME OF CATEGORY # 3</a>
 								</li>
 								<li>
-									<a href="#" class="submenu-item-active">NAME OF CATEGORY # 4</a>
+									<a href="#">NAME OF CATEGORY # 4</a>
 								</li>
 								<li>
-									<a href="#" class="submenu-item-active">NAME OF CATEGORY # 5</a>
+									<a href="#">NAME OF CATEGORY # 5</a>
 								</li>
 								<li>
-									<a href="#" class="submenu-item-active">NAME OF CATEGORY # 6</a>
+									<a href="#">NAME OF CATEGORY # 6</a>
 								</li>
 							</ul>
 						</div>
@@ -269,11 +270,11 @@
 			</div>
 		</div>
 	</section>
-	<section class="site-container services-section services-section-contact-us">
+	<section class="site-container services-section services-section-cart">
 		<div class="special-offers-section">
 			<div class="title-block">
 				<div class="wrapper">
-					<h2 class="title">Contact Us</h2>
+					<h2 class="title">Orders</h2>
 					<h3 class="edit-title">
 						<a class="edit" href="#">
 							<img src="images/icon-edit.png" alt="edit icon">
@@ -283,212 +284,141 @@
 			</div>
 		</div>
 	</section>
-	<section class="site-container preffoter-section contact-us-preffoter">
+	<section class="site-container preffoter-section cart-preffoter">
 		<div class="preffoter-content-bg">
-			<div class="wrapper">
-				<div class="contact-block"  onclick="$('.map-overflow').removeAttr('style')">
-					<div class="contact-row contact-location">
-						<h3 class="edit-customize">
-							<a class="edit" href="#">
-								<img src="images/icon-edit.png" alt="edit icon">
-							</a>
-						</h3>
-						<div class="customize">
-							<div class="img-wrapper">
-								<img src="images/contact-home.png" alt="contact home">
-							</div>
-							<h3 class="title">10131 South Leavitt Street, Chicago, IL 60643, USA</h3>
-						</div>
-					</div>
-					<div class="contact-row contact-mail">
-						<h3 class="edit-customize">
-							<a class="edit" href="#">
-								<img src="images/icon-edit.png" alt="edit icon">
-							</a>
-						</h3>
-						<div class="customize">
-							<div class="img-wrapper">
-								<img src="images/contact-mail.png" alt="contact mail">
-							</div>
-							<h3 class="title">
-								<a href="mailto:Name@website.com">Name@website.com</a>
-							</h3>
-						</div>
-					</div>
-					<div class="contact-row contact-phone">
-						<h3 class="edit-customize">
-							<a class="edit" href="#">
-								<img src="images/icon-edit.png" alt="edit icon">
-							</a>
-						</h3>
-						<div class="customize">
-							<div class="img-wrapper">
-								<img src="images/contact-phone.png" alt="contact phone">
-							</div>
-							<h3 class="title">
-								<a href="tel:7730000000">773.000.0000</a>
-							</h3>
-						</div>
-					</div>
-				</div>
-				<div class="left-desctop">
-					<div class="social-block">
-						<ul class="social-list">
+			<div class="shop-form">
+				<div class="width-content">
+					<div class="wrapper">
+						<ul class="heading">
 							<li>
-								<ul class="first">
-									<li>
-										<a class="icon" href="#">
-											<i class="fa fa-facebook" aria-hidden="true"></i>
-										</a>
-										<h3 class="edit-icon">
-											<a class="edit" href="#">
-												<img src="images/icon-edit.png" alt="edit icon">
-											</a>
-										</h3>
-									</li>
-									<li>
-										<a class="icon" href="#">
-											<i class="fa fa-twitter" aria-hidden="true"></i>
-										</a>
-										<h3 class="edit-icon">
-											<a class="edit" href="#">
-												<img src="images/icon-edit.png" alt="edit icon">
-											</a>
-										</h3>
-									</li>
-									<li>
-										<a class="icon" href="#">
-											<i class="fa fa-instagram" aria-hidden="true"></i>
-										</a>
-										<h3 class="edit-icon">
-											<a class="edit" href="#">
-												<img src="images/icon-edit.png" alt="edit icon">
-											</a>
-										</h3>
-									</li>
-								</ul>
+								<h3>IMAGE</h3>
 							</li>
 							<li>
-								<ul class="second">
-									<li>
-										<a class="icon" href="#">
-											<i class="fa fa-pinterest-p" aria-hidden="true"></i>
-										</a>
-										<h3 class="edit-icon">
-											<a class="edit" href="#">
-												<img src="images/icon-edit.png" alt="edit icon">
-											</a>
-										</h3>
-									</li>
-									<li>
-										<a class="icon" href="#">
-											<i class="fa fa-google-plus" aria-hidden="true"></i>
-										</a>
-										<h3 class="edit-icon">
-											<a class="edit" href="#">
-												<img src="images/icon-edit.png" alt="edit icon">
-											</a>
-										</h3>
-									</li>
-									<li>
-										<a class="icon" href="#">
-											<i class="fa fa-youtube" aria-hidden="true"></i>
-										</a>
-										<h3 class="edit-icon">
-											<a class="edit" href="#">
-												<img src="images/icon-edit.png" alt="edit icon">
-											</a>
-										</h3>
-									</li>
-								</ul>
+								<h3>PRODUCT NAME</h3>
+							</li>
+							<li>
+								<h3>QUANTITY</h3>
+							</li>
+							<li>
+								<h3>UNIT PRICE</h3>
+							</li>
+							<li>
+								<h3>TOTAL</h3>
+							</li>
+							<li>
+								<h3>REMOVE</h3>
 							</li>
 						</ul>
-					</div>
-					<a href="#" class="map-address">Add Address <br/> The Map</a>
-				</div>
-				<div class="mapWrapper">
-					<h3 class="edit-map">
-						<a class="edit" href="#">
-							<img src="images/icon-edit.png" alt="edit icon">
-						</a>
-					</h3>
-					<div id='mapWrapper'></div>
-					<h5 class="map-overflow" onclick="$(this).css('display','none')">&nbsp;</h5>
-				</div>
-			</div>
-			<div class="for-seo-toolbar">
-				<div class="wrapper">
-					<div class="box-border">
-						<h2 class="seo-toolbar-title">SEO Toolbar</h2>
-						<ul class="seo-toolbar-list">
-							<li>
-								<a href="#">Meta Tag (Title)</a>
-							</li>
-							<li>
-								<a  href="#">Meta Tag (Description)</a>
-							</li>
-							<li>
-								<a  href="#">Meta Tag (Key Words)</a>
-							</li>
-							<li>
-								<a  href="#">URL</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="position-block">
-				<div class="wrapper">
-					<nav class="navigations-menu-block">
-						<div class="footer-main-menu">
-							<h2 class="block-title">Catalog Of Products:</h2>
-							<ul class="footer-main-menu-list">
-								<li>
-									<a href="#">Dresses</a>
-								</li>
-								<li>
-									<a href="#">Jackets</a>
-								</li>
-								<li>
-									<a href="#">Jeans</a>
-								</li>
-								<li>
-									<a href="#">Shirts</a>
-								</li>
-								<li>
-									<a href="list-of-products.html">All Products</a>
-								</li>
-							</ul>
+						<div class="main-block">
+							<div class="row">
+								<ul class="product-item">
+									<li class="product-img">
+										<div class="img-wrapper">
+											<img src="images/product-item-single.jpg" alt="product item">
+										</div>
+									</li>
+									<li class="product-name">
+										<h3 class="name">Women's Elastic Hemline Stylish Pullover Casual Dresses</h3>
+									</li>
+									<li class="product-quantity">
+										<span class="mobile">Quantity:</span>
+										<span class="count">2</span>
+										<a class="update-btn" href="#">Update</a>
+									</li>
+									<li class="product-unit-price">
+										<span class="mobile">Unit Price:</span>
+										<span class="price">$ 54.39</span>
+									</li>
+									<li class="product-total-price">
+										<span class="mobile">Total:</span>
+										<span class="total-price">$ 108.78</span>
+									</li>
+									<li class="product-remove">
+										<a class="remove-btn" href="#">
+											<img class="remove-img" src="images/remove.png" alt="remove img">
+											<img class="mobile-img" class="remove-img" src="images/triple-dots.png" alt="triple dots">
+										</a>
+									</li>
+								</ul>
+							</div>
 						</div>
-						<div class="footer-services-menu">
-							<h2 class="block-title">Customer Service:</h2>
-							<ul class="footer-services-menu-list">
-								<li>
-									<a href="about-us.html">About us</a>
-								</li>
-								<li>
-									<a href="polices.html">Polices </a>
-								</li>
-								<li>
-									<a href="contact-us.html">Contact Us</a>
-								</li>
-							</ul>
-						</div>
-					</nav>
-					<a href="#" class="go-to-website-btn">Go To Website</a>
+					</div>
 				</div>
 			</div>
-		</section>
-		<footer class="site-container inside-page-footer">
-		</footer>
-		<script src="js/jquery.min.js"></script>
-		<script src="js/slick.min.js"></script>
-		<script src="js/ninja-slider/ninja-slider.js"></script>
-		<script src="js/ninja-slider/thumbnail-slider.js"></script>
-		<script src="js/semantic-ui/semantic.min.js"></script>
-		<script src="js/semantic-ui/dropdown.min.js"></script>
-		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3&amp;sensor=false"></script>
-		<script src="js/googleMapCustomize.js"></script>
-		<script src="js/main.js"></script>
-	</body>
-	</html>
+		</div>
+	</div>
+</div>
+<!-- <div class="for-seo-toolbar">
+	<div class="wrapper">
+		<div class="box-border">
+			<h2 class="seo-toolbar-title">SEO Toolbar</h2>
+			<ul class="seo-toolbar-list">
+				<li>
+					<a href="#">Meta Tag (Title)</a>
+				</li>
+				<li>
+					<a  href="#">Meta Tag (Description)</a>
+				</li>
+				<li>
+					<a  href="#">Meta Tag (Key Words)</a>
+				</li>
+				<li>
+					<a  href="#">URL</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+</div> -->
+<div class="position-block">
+	<div class="wrapper">
+		<nav class="navigations-menu-block">
+			<div class="footer-main-menu">
+				<h2 class="block-title">Catalog Of Products:</h2>
+				<ul class="footer-main-menu-list">
+					<li>
+						<a href="#">Dresses</a>
+					</li>
+					<li>
+						<a href="#">Jackets</a>
+					</li>
+					<li>
+						<a href="#">Jeans</a>
+					</li>
+					<li>
+						<a href="#">Shirts</a>
+					</li>
+					<li>
+						<a href="list-of-products.html">All Products</a>
+					</li>
+				</ul>
+			</div>
+			<div class="footer-services-menu">
+				<h2 class="block-title">Customer Service:</h2>
+				<ul class="footer-services-menu-list">
+					<li>
+						<a href="about-us.html">About us</a>
+					</li>
+					<li>
+						<a href="polices.html">Polices </a>
+					</li>
+					<li>
+						<a href="contact-us.html">Contact Us</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<a href="#" class="go-to-website-btn">Go To Website</a>
+	</div>
+</div>
+</section>
+<footer class="site-container inside-page-footer">
+</footer>
+<script src="js/jquery.min.js"></script>
+<script src="js/slick.min.js"></script>
+<script src="js/ninja-slider/ninja-slider.js"></script>
+<script src="js/ninja-slider/thumbnail-slider.js"></script>
+<script src="js/semantic-ui/semantic.min.js"></script>
+<script src="js/semantic-ui/dropdown.min.js"></script>
+<script src="js/main.js"></script>
+</body>
+</html>
