--- a/login.html
+++ b/login.html
@@ -13,7 +13,13 @@
 	<!-- Include styles -->
 	<link rel="stylesheet" href="stylesheets/font-awesome.css">
 	<!--- Component CSS -->
-	<link rel="stylesheet" href="stylesheets/main_styles.css">
+	<link rel="stylesheet" href="stylesheets/slick.css">
+	<link rel="stylesheet" href="stylesheets/slick-theme.css">
+	<link rel="stylesheet" href="stylesheets/ninja-slider/ninja-slider.css">
+	<link rel="stylesheet" href="stylesheets/ninja-slider/thumbnail-slider.css">
+	<link rel="stylesheet" href="stylesheets/semantic-ui/semantic.min.css">
+	<link rel="stylesheet" href="stylesheets/semantic-ui/dropdown.min.css">
+	<link rel="stylesheet" href="stylesheets/main-styles.css">
 </head>
 <body class="login-bg">
 	<header class="login-page">
@@ -34,7 +40,7 @@
 			<div class="wrapper">
 				<div class="logo-block">
 					<h1 class="logo-title">
-						<a href="index.html">iBusinessCard 2.0</a>
+						<a href="#">Readyshop 4.0</a>
 					</h1>
 					<h2 class="logo-sign">
 						<a href="index.html">Content Management System</a>
@@ -63,21 +69,18 @@
 								<label for="save-password">Save password</label>
 							</label>
 						</div>
-						<a class="forgot-password" href="#">Forgot password</a>
 						<input type="submit" name="Sign in" id="sign-in" value="Sign in">
 					</div>
 				</form>
 			</div>
 		</section>
-		<footer class="site-container footer-login">
-			<div class="copyright">
-				<div class="wrapper">
-					<h4>Copyright &copy; <a href="http://globalvision.name/">Global Vision</a></h4>
-				</div>
-			</div>
-		</footer>
+		<footer class="site-container footer-login"></footer>
 		<script src="js/jquery.min.js"></script>
-		<script src="js/swiper.js"></script>
+		<script src="js/slick.min.js"></script>
+		<script src="js/ninja-slider/ninja-slider.js"></script>
+		<script src="js/ninja-slider/thumbnail-slider.js"></script>
+		<script src="js/semantic-ui/semantic.min.js"></script>
+		<script src="js/semantic-ui/dropdown.min.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 	</html>
