--- a/page-of-product.html
+++ b/page-of-product.html
@@ -64,7 +64,7 @@
 							<a href="list-of-products.html">ALL PRODUCTS</a>
 						</li>
 						<li>
-							<a href="cart.html">CART</a>
+							<a href="list-of-orders.html">List of products</a>
 						</li>
 						<li>
 							<a href="about-us.html">ABOUT US</a>
@@ -107,7 +107,7 @@
 							<a href="polices.html">POLICY</a>
 						</li>
 						<li>
-							<a href="cart.html">CART</a>
+							<a href="list-of-orders.html">List of products</a>
 						</li>
 						<li>
 							<a href="contact-us.html">CONTACT US</a>
@@ -126,7 +126,7 @@
 					<h5 class="item-count">
 						<a href="#">0</a>
 					</h5>
-					<a class="basket-icon" href="cart-empty.html">
+					<a class="basket-icon" href="List of products-empty.html">
 						<img src="images/shopping-basket.png" alt="basket icon">
 					</a>
 				</div>
@@ -255,7 +255,7 @@
 								</h4>
 							</div>
 							<div class="card-block">
-								<a href="#" class="add-to-card">Add To Cart</a>
+								<a href="#" class="add-to-card">Add To List of products</a>
 								<img src="images/add-to-card.png" alt="add to card">
 							</div>
 						</div>
@@ -333,7 +333,7 @@
 								</a>
 							</div>
 							<div class="card-block">
-								<a href="cart.html"><span><span>Add to cart</span><img src="images/cart-img.png" alt="cart img"></span></a>
+								<a href="list-of-orders.html"><span><span>Add to List of products</span><img src="images/List of products-img.png" alt="List of products img"></span></a>
 							</div>
 						</div>
 						<h4 class="item-title">Shirt jeans with small pocket</h4>
@@ -359,7 +359,7 @@
 								</a>
 							</div>
 							<div class="card-block">
-								<a href="cart.html"><span><span>Add to cart</span><img src="images/cart-img.png" alt="cart img"></span></a>
+								<a href="list-of-orders.html"><span><span>Add to List of products</span><img src="images/List of products-img.png" alt="List of products img"></span></a>
 							</div>
 						</div>
 						<h4 class="item-title">Lingerie with small pocket</h4>
@@ -385,7 +385,7 @@
 								</a>
 							</div>
 							<div class="card-block">
-								<a href="cart.html"><span><span>Add to cart</span><img src="images/cart-img.png" alt="cart img"></span></a>
+								<a href="list-of-orders.html"><span><span>Add to List of products</span><img src="images/List of products-img.png" alt="List of products img"></span></a>
 							</div>
 						</div>
 						<h4 class="item-title">Night dress with small pocket</h4>
@@ -411,7 +411,7 @@
 								</a>
 							</div>
 							<div class="card-block">
-								<a href="cart.html"><span><span>Add to cart</span><img src="images/cart-img.png" alt="cart img"></span></a>
+								<a href="list-of-orders.html"><span><span>Add to List of products</span><img src="images/List of products-img.png" alt="List of products img"></span></a>
 							</div>
 						</div>
 						<h4 class="item-title">Shirt jeans with small pocket</h4>
@@ -437,7 +437,7 @@
 								</a>
 							</div>
 							<div class="card-block">
-								<a href="cart.html"><span><span>Add to cart</span><img src="images/cart-img.png" alt="cart img"></span></a>
+								<a href="list-of-orders.html"><span><span>Add to List of products</span><img src="images/List of products-img.png" alt="List of products img"></span></a>
 							</div>
 						</div>
 						<h4 class="item-title">Lingerie with small pocket</h4>
@@ -463,7 +463,7 @@
 								</a>
 							</div>
 							<div class="card-block">
-								<a href="cart.html"><span><span>Add to cart</span><img src="images/cart-img.png" alt="cart img"></span></a>
+								<a href="list-of-orders.html"><span><span>Add to List of products</span><img src="images/List of products-img.png" alt="List of products img"></span></a>
 							</div>
 						</div>
 						<h4 class="item-title">Night dress with small pocket</h4>
@@ -489,7 +489,7 @@
 								</a>
 							</div>
 							<div class="card-block">
-								<a href="cart.html"><span><span>Add to cart</span><img src="images/cart-img.png" alt="cart img"></span></a>
+								<a href="list-of-orders.html"><span><span>Add to List of products</span><img src="images/List of products-img.png" alt="List of products img"></span></a>
 							</div>
 						</div>
 						<h4 class="item-title">Shirt jeans with small pocket</h4>
@@ -515,7 +515,7 @@
 								</a>
 							</div>
 							<div class="card-block">
-								<a href="cart.html"><span><span>Add to cart</span><img src="images/cart-img.png" alt="cart img"></span></a>
+								<a href="list-of-orders.html"><span><span>Add to List of products</span><img src="images/List of products-img.png" alt="List of products img"></span></a>
 							</div>
 						</div>
 						<h4 class="item-title">Lingerie with small pocket</h4>
@@ -541,7 +541,7 @@
 								</a>
 							</div>
 							<div class="card-block">
-								<a href="cart.html"><span><span>Add to cart</span><img src="images/cart-img.png" alt="cart img"></span></a>
+								<a href="list-of-orders.html"><span><span>Add to List of products</span><img src="images/List of products-img.png" alt="List of products img"></span></a>
 							</div>
 						</div>
 						<h4 class="item-title">Night dress with small pocket</h4>
