--- a/polices.html
+++ b/polices.html
@@ -14,29 +14,41 @@
 	<!--- Component CSS -->
 	<link rel="stylesheet" href="stylesheets/slick.css">
 	<link rel="stylesheet" href="stylesheets/slick-theme.css">
+	<link rel="stylesheet" href="stylesheets/ninja-slider/ninja-slider.css">
+	<link rel="stylesheet" href="stylesheets/ninja-slider/thumbnail-slider.css">
+	<link rel="stylesheet" href="stylesheets/semantic-ui/semantic.min.css">
+	<link rel="stylesheet" href="stylesheets/semantic-ui/dropdown.min.css">
 	<link rel="stylesheet" href="stylesheets/main-styles.css">
 
 </head>
 <body>
-	<header class="site-container">
-		<div class="wrapper">
-			<h1 class="logo">
-				<a href="index.html">
-					<img src="images/logo.png" alt="logo">
-				</a>
-			</h1>
-			<h2 class="shop-name">shop name</h2>
-
-			<div class="button_container" id="toggle">
-				<span class="top"></span>
-				<span class="middle"></span>
-				<span class="bottom"></span>
+	<div class="login-page-inside">
+		<div class="header-logo-block">
+			<div class="header-bg">
+				<h2 class="company-logo">
+					<a href="index.html">Global Vision</a>
+				</h2>
+				<ul class="color-list">
+					<li class="color-1"></li>
+					<li class="color-2"></li>
+					<li class="color-3"></li>
+					<li class="color-4"></li>
+				</ul>
 			</div>
-			<div class="overlay" id="overlay">
-				<nav class="overlay-menu">
-					<ul class="desctop">
+		</div>
+		<div class="header-top">
+			<div class="wrapper">
+				<!-- mobile menu -->
+				<div class="dropdovn-menu-mobile">
+					<input type="checkbox" id="hmt" class="hidden-menu-ticker">
+					<label class="btn-menu" for="hmt">
+						<span class="first"></span>
+						<span class="second"></span>
+						<span class="third"></span>
+					</label>
+					<ul class="hidden-menu">
 						<li>
-							<a href="index.html">HOME</a>
+							<a href="index.html">Home</a>
 						</li>
 						<li>
 							<a href="dresses.html">Dresses</a>
@@ -54,22 +66,87 @@
 							<a href="lingerie.html">Lingerie</a>
 						</li>
 						<li>
-							<a href="special-offers.html">SPECIAL OFFERS</a>
+							<a href="special-offers.html">Special Offers</a>
 						</li>
 						<li>
-							<a href="list-of-products.html">ALL PRODUCTS</a>
+							<a href="list-of-products.html">All Products</a>
 						</li>
 						<li>
-							<a href="cart.html">CART</a>
+							<a href="list-of-orders.html">List of orders</a>
 						</li>
 						<li>
-							<a href="about-us.html">ABOUT US</a>
+							<a href="about-us.html">About Us</a>
 						</li>
 						<li>
-							<a href="polices.html">POLICY</a>
+							<a href="polices.html">Policy</a>
 						</li>
 						<li>
-							<a href="contact-us.html">CONTACT US</a>
+							<a href="contact-us.html">Contact Us</a>
+						</li>
+					</ul>
+				</div>
+				<!-- end- mobile menu -->
+				<div class="settings-block">
+					<a id="log-out" href="#">
+						<span class="fa fa-sign-out" aria-hidden="true"></span>
+					</a>
+				</div>
+				<div class="logo-block">
+					<h1 class="logo-title">
+						<a href="index.html">Readyshop 4.0</a>
+					</h1>
+					<h2 class="logo-sign">
+						<a href="index.html">Content Management System</a>
+					</h2>
+				</div>
+			</div>
+		</div>
+	</div>
+	<header class="site-container">
+		<div class="wrapper">
+			<div class="button_container" id="toggle">
+				<span class="top"></span>
+				<span class="middle"></span>
+				<span class="bottom"></span>
+			</div>
+			<div class="overlay" id="overlay">
+				<nav class="overlay-menu">
+					<ul>
+						<li>
+							<a href="index.html">Home</a>
+						</li>
+						<li>
+							<a href="dresses.html">Dresses</a>
+						</li>
+						<li>
+							<a href="jackets.html">Jackets</a>
+						</li>
+						<li>
+							<a href="jeans.html">Jeans</a>
+						</li>
+						<li>
+							<a href="shirts.html">Shirts</a>
+						</li>
+						<li>
+							<a href="lingerie.html">Lingerie</a>
+						</li>
+						<li>
+							<a href="special-offers.html">Special Offers</a>
+						</li>
+						<li>
+							<a href="list-of-products.html">All Products</a>
+						</li>
+						<li>
+							<a href="list-of-orders.html">List of orders</a>
+						</li>
+						<li>
+							<a href="about-us.html">About Us</a>
+						</li>
+						<li>
+							<a href="polices.html">Policy</a>
+						</li>
+						<li>
+							<a href="contact-us.html">Contact Us</a>
 						</li>
 					</ul>
 					<ul class="mobile-services">
@@ -103,7 +180,7 @@
 							<a href="polices.html">POLICY</a>
 						</li>
 						<li>
-							<a href="cart.html">CART</a>
+							<a href="list-of-orders.html">List of orders</a>
 						</li>
 						<li>
 							<a href="contact-us.html">CONTACT US</a>
@@ -115,28 +192,29 @@
 		<div class="line"></div>
 		<div class="navigation-block">
 			<div class="wrapper">
-				<form action="#" id="search-form">
-					<input type="text" id="search-field" placeholder="Search">
-				</form>
 				<div class="basket-wrapper">
-					<!-- <h5 class="item-count items-there">  --> <!-- If in basket has product? need add items-here class -->
 					<h5 class="item-count">
-						<a href="#">0</a>
+						<a href="#">List Of Orders</a>
 					</h5>
-					<a class="basket-icon" href="cart-empty.html">
+					<a class="basket-icon" href="List of orders-empty.html">
 						<img src="images/shopping-basket.png" alt="basket icon">
 					</a>
+				</div>
+				<div class="add-product-mobile">
+					<a href="#">Add New Product</a>
 				</div>
 			</div>
 		</div>
 	</header>
 	<section class="site-container type-nav type-nav-polices">
-		<div class="full-img">
-			<img class="full-width-img" src="images/polices-type-nav-img.jpg" alt="polices images">
-		</div>
 		<div class="under-content">
 			<div class="desctop-services-menu">
 				<ul class="navigation-menu">
+					<li class="desctop">
+						<a href="#">
+							<span>Add New Product</span>
+						</a>
+					</li>
 					<li>
 						<a href="#">
 							<span>DRESSES</span>
@@ -156,12 +234,6 @@
 						<a href="#">
 							<span>SHIRTS</span>
 						</a>
-					</li>
-					<li class="mobile">
-						<a href="#">LINGERIE</a>
-					</li>
-					<li class="mobile">
-						<a href="list-of-products.html">ALL PRODUCTS</a>
 					</li>
 					<li class="more-menu">
 						<a>
@@ -202,6 +274,11 @@
 			<div class="title-block">
 				<div class="wrapper">
 					<h2 class="title">POLICES</h2>
+					<h3 class="edit-title">
+						<a class="edit" href="#">
+							<img src="images/icon-edit.png" alt="edit icon">
+						</a>
+					</h3>
 				</div>
 			</div>
 		</div>
@@ -209,125 +286,114 @@
 	<section class="site-container preffoter-section polices-preffoter">
 		<div class="preffoter-content-bg">
 			<div class="wrapper">
-				<h3 class="title">Delivery Policy</h3>
-				<p class="mobile">Lorem ipsum dolor sit amet, vitae integer, mollis ligula ac ante diam nunc. Vitae curabitur penatibus lorem aliquam duis suspendisse. Metus ornare, a accumsan nulla aliquet, eu sit erat nonummy penatibus, arcu nibh sed odio aenean erat consequat, amet massa. Sus</p>
-				<p class="mobile">pendisse at eros volutpat nec adipiscing non, cursus dolor dolor dis pulvinar nibh laoreet, ut lacus pellen
-					um rutrum. Vivamus fringilla rhoncus a, venenatis nisl sed phasellus eu rutrum et, pharetra in qui sit metus.</p>
-					<p class="desctop">Lorem ipsum dolor sit amet, vitae integer, mollis ligula ac ante diam nunc. Vitae curabitur penatibus lorem aliquam duis suspendisse. Metus ornare, a accumsan nulla aliquet, eu sit erat nonummy penatibus, arcu nibh sed odio aenean erat consequat, amet massa. Suspendisse at eros volutpat nec adipiscing non, cursus dolor dolor dis pulvinar nibh laoreet, ut lacus pellentesque, mattis et leo. Et cubilia, nam cursus egestas molestie metus, risus interdum suscipit porta dolor tincidunt parturient, ac rutrum rutrum. Vivamus fringilla rhoncus a, venenatis nisl sed phasellus eu rutrum et, pharetra in qui sit metus.</p>
-					<p class="desctop">Wisi officia eget augue sit, placerat tristique lectus vestibulum, tempor sed at ultricies augue eu mi, scelerisque lacinia sodales quisque. Arcu neque nec sit tellus lectus. Neque interdum viverra, aliquam commodo, facilisis wisi dui ullamcorper. In est iaculis est a sollicitudin, arcu aenean. Proin ad a, aliquam consectetur odio nulla, et fusce ultricies. </p>
-					<p class="desctop">At magnis, nunc imperdiet vulputate consectetuer quam rutrum, laoreet sodales fusce scelerisque adipiscing, ac nunc vivamus, eget vel justo massa sit. Est placerat lectus dolor </p>
+				<div class="for-policy-title">
+					<h3 class="title">Delivery Policy</h3>
+					<h3 class="edit-title">
+						<a class="edit" href="#">
+							<img src="images/icon-edit.png" alt="edit icon">
+						</a>
+					</h3>
+				</div>
+				<div class="for-policy-desciption">
+					<h3 class="edit-description">
+						<a class="edit" href="#">
+							<img src="images/icon-edit.png" alt="edit icon">
+						</a>
+					</h3>
+					<p>Lorem ipsum dolor sit amet, vitae integer, mollis ligula ac ante diam nunc. Vitae curabitur penatibus lorem aliquam duis suspendisse. Metus ornare, a accumsan nulla aliquet, eu sit erat nonummy penatibus, arcu nibh sed odio aenean erat consequat, amet massa. Suspendisse at eros volutpat nec adipiscing non, cursus dolor dolor dis pulvinar nibh laoreet, ut lacus pellentesque, mattis et leo. Et cubilia, nam cursus egestas molestie metus, risus interdum suscipit porta dolor tincidunt parturient, ac rutrum rutrum. Vivamus fringilla rhoncus a, venenatis nisl sed phasellus eu rutrum et, pharetra in qui sit metus.</p>
+					<p>Wisi officia eget augue sit, placerat tristique lectus vestibulum, tempor sed at ultricies augue eu mi, scelerisque lacinia sodales quisque. Arcu neque nec sit tellus lectus. Neque interdum viverra, aliquam commodo, facilisis wisi dui ullamcorper. In est iaculis est a sollicitudin, arcu aenean. Proin ad a, aliquam consectetur odio nulla, et fusce ultricies. </p>
+					<p>At magnis, nunc imperdiet vulputate consectetuer quam rutrum, laoreet sodales fusce scelerisque adipiscing, ac nunc vivamus, eget vel justo massa sit. Est placerat lectus dolor </p>
+				</div>
+				<div class="for-policy-title">
 					<h3 class="title">Return Policy</h3>
-					<p class="mobile">Lorem ipsum dolor sit amet, vitae integer, mollis ligula ac ante diam nunc. Vitae curabitur penatibus lorem aliquam duis suspendisse. Metus ornare, a accumsan nulla aliquet, eu sit erat nonummy penatibus, arcu nibh sed odio aenean erat consequat, amet massa. Sus</p>
-					<p class="mobile">pendisse at eros volutpat nec adipiscing non, cursus dolor dolor dis pulvinar nibh laoreet, ut lacus pellen
-						um rutrum. Vivamus fringilla.</p>
-						<p class="desctop">Lorem ipsum dolor sit amet, vitae integer, mollis ligula ac ante diam nunc. Vitae curabitur penatibus lorem aliquam duis suspendisse. Metus ornare, a accumsan nulla aliquet, eu sit erat nonummy penatibus, arcu nibh sed odio aenean erat consequat, amet massa. Suspendisse at eros volutpat nec adipiscing non, cursus dolor dolor dis pulvinar nibh laoreet, ut lacus pellentesque, mattis et leo. Et cubilia, nam cursus egestas molestie metus, risus interdum suscipit porta dolor tincidunt parturient, ac rutrum rutrum. Vivamus fringilla rhoncus a, venenatis nisl sed phasellus eu rutrum et, pharetra in qui sit metus.</p>
-						<p class="desctop">Wisi officia eget augue sit, placerat tristique lectus vestibulum, tempor sed at ultricies augue eu mi, scelerisque lacinia sodales quisque. Arcu neque nec sit tellus lectus. Neque interdum viverra, aliquam commodo, facilisis wisi dui ullamcorper. In est iaculis est a sollicitudin, arcu aenean. Proin ad a, aliquam consectetur odio nulla, et fusce ultricies. </p>
-						<p class="desctop">At magnis, nunc imperdiet vulputate consectetuer quam rutrum, laoreet sodales fusce scelerisque adipiscing, ac nunc vivamus, eget vel justo massa sit. Est placerat lectus dolor </p>
-					</div>
+					<h3 class="edit-title">
+						<a class="edit" href="#">
+							<img src="images/icon-edit.png" alt="edit icon">
+						</a>
+					</h3>
 				</div>
-				<div class="position-block">
-					<div class="wrapper">
-						<nav class="navigations-menu-block">
-							<div class="footer-main-menu">
-								<h2 class="block-title">Catalog Of Products:</h2>
-								<ul class="footer-main-menu-list">
-									<li>
-										<a href="#">Dresses</a>
-									</li>
-									<li>
-										<a href="#">Jackets</a>
-									</li>
-									<li>
-										<a href="#">Jeans</a>
-									</li>
-									<li>
-										<a href="#">Shirts</a>
-									</li>
-									<li>
-										<a href="list-of-products.html">All Products</a>
-									</li>
-								</ul>
-							</div>
-							<div class="footer-services-menu">
-								<h2 class="block-title">Customer Service:</h2>
-								<ul class="footer-services-menu-list">
-									<li>
-										<a href="about-us.html">About us</a>
-									</li>
-									<li>
-										<a href="polices.html">Polices </a>
-									</li>
-									<li>
-										<a href="contact-us.html">Contact Us</a>
-									</li>
-								</ul>
-								<ul class="social-icon">
-									<li>
-										<a href="#">
-											<i class="fa fa-facebook" aria-hidden="true"></i>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<i class="fa fa-twitter" aria-hidden="true"></i>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<i class="fa fa-instagram" aria-hidden="true"></i>
-										</a>
-									</li>
-								</ul>
-							</div>
-							<div class="question-form">
-								<h2 class="block-title">Do you have a question?</h2>
-								<form action="#" id="question-form">
-									<input autocomplete="off" type="text" id="name" name="Name" placeholder="Name">
-									<input autocomplete="off" required="required" type="email" id="email" name="Email" placeholder="Your Email">
-									<textarea id="message-field" placeholder="Your question ..."></textarea>
-									<input type="submit" id="send-btn" name="send" value="send">
-								</form>
-							</div>
-						</nav>
-					</div>
-					<div class="mobile-block">
-						<div class="wrapper">
-							<a href="#0" id="go-top" class="cd-top cd-is-visible cd-fade-out">
-								<img src="images/arow-up.png" alt="arow up">
-							</a>
-							<ul class="social-icon-mobile">
-								<li>
-									<a href="#">
-										<i class="fa fa-facebook" aria-hidden="true"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<i class="fa fa-twitter" aria-hidden="true"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<i class="fa fa-instagram" aria-hidden="true"></i>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
+				<div class="for-policy-desciption">
+					<h3 class="edit-description">
+						<a class="edit" href="#">
+							<img src="images/icon-edit.png" alt="edit icon">
+						</a>
+					</h3>
+					<p>Lorem ipsum dolor sit amet, vitae integer, mollis ligula ac ante diam nunc. Vitae curabitur penatibus lorem aliquam duis suspendisse. Metus ornare, a accumsan nulla aliquet, eu sit erat nonummy penatibus, arcu nibh sed odio aenean erat consequat, amet massa. Suspendisse at eros volutpat nec adipiscing non, cursus dolor dolor dis pulvinar nibh laoreet, ut lacus pellentesque, mattis et leo. Et cubilia, nam cursus egestas molestie metus, risus interdum suscipit porta dolor tincidunt parturient, ac rutrum rutrum. Vivamus fringilla rhoncus a, venenatis nisl sed phasellus eu rutrum et, pharetra in qui sit metus.</p>
+					<p>Wisi officia eget augue sit, placerat tristique lectus vestibulum, tempor sed at ultricies augue eu mi, scelerisque lacinia sodales quisque. Arcu neque nec sit tellus lectus. Neque interdum viverra, aliquam commodo, facilisis wisi dui ullamcorper. In est iaculis est a sollicitudin, arcu aenean. Proin ad a, aliquam consectetur odio nulla, et fusce ultricies. </p>
+					<p>At magnis, nunc imperdiet vulputate consectetuer quam rutrum, laoreet sodales fusce scelerisque adipiscing, ac nunc vivamus, eget vel justo massa sit. Est placerat lectus dolor </p>
 				</div>
-			</section>
-			<footer class="site-container inside-page-footer">
-				<div class="copyright">
-					<div class="wrapper">
-						<h3 class="copyright-sign">
-							<a href="http://globalvision.name/">Web Development</a> <span>&copy;</span>  
-							<a href="http://globalvision.name/">Global Vision</a>
-						</h3>
-					</div>
+			</div>
+		</div>
+		<div class="for-seo-toolbar">
+			<div class="wrapper">
+				<div class="box-border">
+					<h2 class="seo-toolbar-title">SEO Toolbar</h2>
+					<ul class="seo-toolbar-list">
+						<li>
+							<a href="#">Meta Tag (Title)</a>
+						</li>
+						<li>
+							<a  href="#">Meta Tag (Description)</a>
+						</li>
+						<li>
+							<a  href="#">Meta Tag (Key Words)</a>
+						</li>
+						<li>
+							<a  href="#">URL</a>
+						</li>
+					</ul>
 				</div>
-			</footer>
-			<script src="js/jquery.min.js"></script>
-			<script src="js/slick.min.js"></script>
-			<script src="js/main.js"></script>
-		</body>
-		</html>
+			</div>
+		</div>
+		<div class="position-block">
+			<div class="wrapper">
+				<nav class="navigations-menu-block">
+					<div class="footer-main-menu">
+						<h2 class="block-title">Catalog Of Products:</h2>
+						<ul class="footer-main-menu-list">
+							<li>
+								<a href="#">Dresses</a>
+							</li>
+							<li>
+								<a href="#">Jackets</a>
+							</li>
+							<li>
+								<a href="#">Jeans</a>
+							</li>
+							<li>
+								<a href="#">Shirts</a>
+							</li>
+							<li>
+								<a href="list-of-products.html">All Products</a>
+							</li>
+						</ul>
+					</div>
+					<div class="footer-services-menu">
+						<h2 class="block-title">Customer Service:</h2>
+						<ul class="footer-services-menu-list">
+							<li>
+								<a href="about-us.html">About us</a>
+							</li>
+							<li>
+								<a href="polices.html">Polices </a>
+							</li>
+							<li>
+								<a href="contact-us.html">Contact Us</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
+				<a href="#" class="go-to-website-btn">Go To Website</a>
+			</div>
+		</div>
+	</section>
+	<footer class="site-container inside-page-footer"></footer>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/ninja-slider/ninja-slider.js"></script>
+	<script src="js/ninja-slider/thumbnail-slider.js"></script>
+	<script src="js/semantic-ui/semantic.min.js"></script>
+	<script src="js/semantic-ui/dropdown.min.js"></script>
+	<script src="js/main.js"></script>
+</body>
+</html>
