--- a/list-of-orders.html
+++ b/list-of-orders.html
@@ -195,9 +195,9 @@
 			<div class="wrapper">
 				<div class="basket-wrapper">
 					<h5 class="item-count">
-						<a href="#">List Of Orders</a>
+						<a href="list-of-orders.html">List Of Orders</a>
 					</h5>
-					<a class="basket-icon" href="List of products-empty.html">
+					<a class="basket-icon" href="list-of-orders.html">
 						<img src="images/shopping-basket.png" alt="basket icon">
 					</a>
 				</div>
@@ -289,57 +289,68 @@
 			<div class="shop-form">
 				<div class="width-content">
 					<div class="wrapper">
-						<ul class="heading">
-							<li>
-								<h3>IMAGE</h3>
-							</li>
-							<li>
-								<h3>PRODUCT NAME</h3>
-							</li>
-							<li>
-								<h3>QUANTITY</h3>
-							</li>
-							<li>
-								<h3>UNIT PRICE</h3>
-							</li>
-							<li>
-								<h3>TOTAL</h3>
-							</li>
-							<li>
-								<h3>REMOVE</h3>
-							</li>
-						</ul>
 						<div class="main-block">
 							<div class="row">
 								<ul class="product-item">
-									<li class="product-img">
-										<div class="img-wrapper">
-											<img src="images/product-item-single.jpg" alt="product item">
+									<li class="product-number">
+										<div class="title">
+											<h3 class="head">n</h3>
+										</div>
+										<div class="content">
+											<p>01</p>
 										</div>
 									</li>
-									<li class="product-name">
-										<h3 class="name">Women's Elastic Hemline Stylish Pullover Casual Dresses</h3>
-									</li>
-									<li class="product-quantity">
-										<span class="mobile">Quantity:</span>
-										<span class="count">2</span>
-										<a class="update-btn" href="#">Update</a>
-									</li>
-									<li class="product-unit-price">
-										<span class="mobile">Unit Price:</span>
-										<span class="price">$ 54.39</span>
-									</li>
-									<li class="product-total-price">
-										<span class="mobile">Total:</span>
-										<span class="total-price">$ 108.78</span>
-									</li>
-									<li class="product-remove">
-										<a class="remove-btn" href="#">
-											<img class="remove-img" src="images/remove.png" alt="remove img">
-											<img class="mobile-img" class="remove-img" src="images/triple-dots.png" alt="triple dots">
-										</a>
-									</li>
-								</ul>
+									<li class="product-date">
+										<div class="title">
+											<h3 class="head">Date</h3>
+										</div>
+										<div class="content">
+											<p>26.12.2016</p>
+										</div>
+										<li class="product-name">
+											<div class="title">
+												<h3 class="head">Name</h3>
+											</div>
+											<div class="content">
+												<p>John Jamson</p>
+											</div>
+										</li>
+										<li class="product-email">
+											<div class="title">
+												<h3 class="head">Email</h3>
+											</div>
+											<div class="content">
+												<p>Name@website.com</p>
+											</div>
+										</li>
+										<li class="product-quantity">
+											<div class="title">
+												<h3 class="head">Quantity</h3>
+											</div>
+											<div class="content">
+												<p>2</p>
+											</div>
+										</li>
+										<li class="product-total-price">
+											<div class="title">
+												<h3 class="head">Total Price</h3>
+											</div>
+											<div class="content">
+												<p><span>$</span> 108.78</p>
+											</div>
+										</li>
+										<li class="product-pdf-file">
+											<div class="title">
+												<h3 class="head">PDF File</h3>
+											</div>
+											<div class="content">
+												<p>
+													<a href="#">Details</a>
+												</p>
+											</div>
+										</li>
+									</ul>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -347,7 +358,6 @@
 			</div>
 		</div>
 	</div>
-</div>
 <!-- <div class="for-seo-toolbar">
 	<div class="wrapper">
 		<div class="box-border">
