--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
 			<div class="wrapper">
 				<div class="basket-wrapper">
 					<h5 class="item-count">
-						<a href="#">List Of Orders</a>
+						<a href="list-of-orders.html">List Of Orders</a>
 					</h5>
-					<a class="basket-icon" href="List of products-empty.html">
+					<a class="basket-icon" href="list-of-orders.html">
 						<img src="images/shopping-basket.png" alt="basket icon">
 					</a>
 				</div>
