fix slider item

--- a/page-of-product.html
+++ b/page-of-product.html
@@ -395,6 +395,7 @@
 												<img src="images/icon-edit.png" alt="edit icon">
 											</a>
 										</h3>
+										<a class="thumb" href="images/sliderok-itemok.jpg"></a>
 									</li>
 								</ul>
 							</div>
