--- a/list-of-orders.html
+++ b/list-of-orders.html
@@ -73,10 +73,10 @@
 							<a href="list-of-products.html">All Products</a>
 						</li>
 						<li>
-							<a href="list-of-product.html">List of products</a>
+							<a href="list-of-products.html">List of products</a>
 						</li>
 						<li>
-							<a href="list-of-product.html">List of orders</a>
+							<a href="list-of-orders.html">List of orders</a>
 						</li>
 						<li>
 							<a href="about-us.html">About Us</a>
@@ -141,10 +141,10 @@
 							<a href="list-of-products.html">All Products</a>
 						</li>
 						<li>
-							<a href="list-of-product.html">List of products</a>
+							<a href="list-of-products.html">List of products</a>
 						</li>
 						<li>
-							<a href="list-of-product.html">List of orders</a>
+							<a href="list-of-orders.html">List of orders</a>
 						</li>
 						<li>
 							<a href="about-us.html">About Us</a>
