--- a/page-of-product.html
+++ b/page-of-product.html
@@ -72,10 +72,10 @@
 							<a href="list-of-products.html">All Products</a>
 						</li>
 						<li>
-							<a href="list-of-product.html">List of products</a>
+							<a href="list-of-products.html">List of products</a>
 						</li>
 						<li>
-							<a href="list-of-product.html">List of orders</a>
+							<a href="list-of-orders.html">List of orders</a>
 						</li>
 						<li>
 							<a href="about-us.html">About Us</a>
@@ -140,10 +140,10 @@
 							<a href="list-of-products.html">All Products</a>
 						</li>
 						<li>
-							<a href="list-of-product.html">List of products</a>
+							<a href="list-of-products.html">List of products</a>
 						</li>
 						<li>
-							<a href="list-of-product.html">List of orders</a>
+							<a href="list-of-orders.html">List of orders</a>
 						</li>
 						<li>
 							<a href="about-us.html">About Us</a>
