redesign single page of product

--- a/list-of-products.html
+++ b/list-of-products.html
@@ -514,7 +514,7 @@
 	<section class="site-container preffoter-section">
 		<div class="wrapper">
 			<h2 class="welcome-title">
-				<span>Welcome</span>
+				<span>Welcome to category Dresses</span>
 				<p class="edit-title">
 					<a class="edit" href="#">
 						<img src="images/icon-edit.png" alt="edit icon">
