--- a/page-of-product.html
+++ b/page-of-product.html
@@ -550,6 +550,26 @@
 							</div>
 						</div>
 						<a class="add-more" href="#">Add More</a>
+						<div class="choose-category-block">
+							<div class="ui compact selection dropdown">
+								<i class="dropdown icon"></i>
+								<div class="text">Choose Category</div>
+								<div class="menu">
+									<div class="item">Dresses</div>
+									<div class="item">Jackets</div>
+									<div class="item">Jeans</div>
+									<div class="item">Shirts</div>
+								</div>
+							</div>
+						</div>
+						<a id="add-category">Add Category</a>
+						<div class="special-offers-product">
+							<label>
+								<input type="checkbox" value="" class="spec-offers" id="spec-offers" name="spec-offers">
+								<span class="spec-offers-checkbox-custom"></span>
+								<label for="spec-offers">Check out as a SPECIAL OFFER</label>
+							</label>
+						</div>
 					</div>
 				</div>
 				<div class="description-product">
