add delete btn to single product page

--- a/page-of-product.html
+++ b/page-of-product.html
@@ -593,6 +593,11 @@
 					</div>
 				</div>
 			</div>
+			<div class="wrapper">
+				<div class="delete-block">
+					<a class="delete-btn" href="#">Delete</a>
+				</div>
+			</div>
 			<div class="for-seo-toolbar">
 				<div class="wrapper">
 					<div class="box-border">
